--- a/backEnd/.env
+++ b/backEnd/.env
@@ -3,3 +3,4 @@ MONGO_DB_USER=admin0
 MONGO_DB_PASSWORD=Mreza901184760
 MONGO_DB_DATABASE=Store
 JWT_SECRET= MERNSECRET
+API= 'http://localhost:2020'
