--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
     "bootstrap-v4-rtl": "^4.6.0-1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
+    "react-checkbox-tree": "^1.7.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
